# lead-scoring

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  deploy.yml  train.yml
ml/lead_scoring/pre_lead/: .gcloudignore  DEPLOY.md  README.md  pyproject.toml  requirements-dev.txt  requirements-pipeline.txt
ml/lead_scoring/pre_lead/deploy/: 00_setup_gcp.sh  01_build_images.sh  02_run_pipeline.sh  03_deploy_serving.sh  99_teardown.sh  CICD.md  cloudbuild.yaml  config.sh  tf.sh
ml/lead_scoring/pre_lead/notebooks/: mejora_modelo_segmentado.ipynb  train_transformers_new_dats.ipynb
ml/lead_scoring/pre_lead/pipelines/: compile_and_run.py  train_pipeline.py
ml/lead_scoring/pre_lead/serving/: Dockerfile  app.py  requirements.txt
ml/lead_scoring/pre_lead/src/leadscoring/: __init__.py  config.py  data.py  evaluate.py  preprocess.py  train.py
ml/lead_scoring/pre_lead/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
ml/lead_scoring/pre_lead/tests/: test_config.py  test_evaluate.py  test_preprocess.py
ml/lead_scoring/pre_lead/training/: Dockerfile  requirements.txt
